<resources>
    <string name="app_name">WeatherApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="city_input_fragment_label">First Fragment</string>
    <string name="weather_details_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="city">City</string>
    <string name="show_results">Show results</string>
    <string name="city_not_filled">City must be set</string>
    <string name="temperature">Temperature:</string>
    <string name="min">Min:</string>
    <string name="max">Max:</string>
    <string name="humidity">Humidity:</string>
    <string name="pressure">Pressure:</string>

    <string name="celsius">%s \u2103</string>

    <string name="network_error_occurred">Network error occurred</string>
    <string name="error_occurred">Error occurred</string>
</resources>